<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/activity_edit_contact_item"
    tools:context="com.example.michael.addressbook.EditContactItem">

    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_field"/>

    <TextView
        android:id="@+id/name_required_message_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_field"
        android:text="@string/name_required_message"/>

    <EditText
        android:id="@+id/phone_number_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number_field"
        android:layout_below="@+id/name_required_message_textview"/>

    <EditText
        android:id="@+id/email_address_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address_field"
        android:layout_below="@+id/phone_number_field"/>

    <TextView
        android:id="@+id/address_header_edit_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:text="@string/addresss_header"
        android:layout_below="@+id/email_address_field"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/street_address_field"
        android:background="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/street_address_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/street_address_field"
        android:layout_below="@+id/address_header_edit_activity"/>

    <EditText
        android:id="@+id/city_state_zip_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city_state_zip_field"
        android:layout_below="@+id/street_address_field"/>

    <Button
        android:id="@+id/save_contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/save_contact_button"
        android:layout_below="@+id/city_state_zip_field" />

</RelativeLayout>
